manifests/jellyseerr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
          subPath: docker-config/jellyseerr/config
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jellyseerr-config-pvc
